--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <script src="main_r4.js"></script>
 
 </head><body onload="init()">
+<script src="zh/core.js"></script>
 	<div id="div_left">
 	</div>
 	<div id="div_header">
@@ -24,7 +25,7 @@
 	<div id="div_resources">
 		<div class="resource_space">
 			<div class="button green_button" onmouseup="toy_click()">
-				<div class="button_title">Make toy</div>
+				<div class="button_title">制造玩具</div>
 				<div class="button_text" id="toy_button_text"></div>
 			</div>
 			<div class="resource_big" id="toy_count"></div>
@@ -32,7 +33,7 @@
 		</div>
 		<div class="resource_space">
 			<div class="button red_button" onmouseup="present_click()">
-				<div class="button_title">Wrap present</div>
+				<div class="button_title">包装礼物</div>
 				<div class="button_text" id="present_button_text"></div>
 			</div>
 			<div class="resource_big" id="present_count"></div>
@@ -70,19 +71,19 @@
 	</div>
 	<div id="div_tabs">
 		<div class="box box_upgrade" id="tab_upgrades" onmouseup="{show_tab('tab_upgrades', 'cont_upgrades')}">
-			<div class="box_title">Upgrade</div>
+			<div class="box_title">升级</div>
 		</div>
 		<div class="box box_upgrade" id="tab_reindeer" onmouseup="{show_tab('tab_reindeer', 'cont_reindeer')}">
-			<div class="box_title">Reindeer</div>
+			<div class="box_title">驯鹿</div>
 		</div>
 		<div class="box box_upgrade" id="tab_tree" onmouseup="{show_tab('tab_tree', 'cont_tree')}">
-			<div class="box_title">Christmas Tree</div>
+			<div class="box_title">圣诞树</div>
 		</div>
 		<div class="box box_upgrade" id="tab_save" onmouseup="{show_tab('tab_save', 'cont_save')}">
-			<div class="box_title">Save</div>
+			<div class="box_title">保存</div>
 		</div>
 		<div class="box box_upgrade" id="tab_achievements" onmouseup="{show_tab('tab_achievements', 'cont_achievements')}">
-			<div class="box_title">Achievements</div>
+			<div class="box_title">成就</div>
 		</div>
 		<div id="div_tab">
 			<div class="no_display" id="cont_upgrades">
@@ -90,11 +91,11 @@
 			</div>
 			<div class="no_display" id="cont_reindeer">
 				<div class="box">
-					The reindeer would like you to decorate their stable.  In return they will speed up time with Christmas magic.<br>
+					驯鹿希望你装饰他们的马厩。 作为回报，他们将加快圣诞魔术的时间。<br>
 					<br>
 
 					<form onsubmit="return input_reindeer()" autocomplete="false">
-						<div class="b_margin">What decoration do you put up?</div>
+						<div class="b_margin">你装的是什么装饰品？</div>
 						<input type="text" id="input_decoration"/>
 					</form>
 					<br>
@@ -104,10 +105,10 @@
 					</div>
 					<br>
 
-					<div class="box_title">Current speed: <span id="time_speed_display"></span>%</div>
+					<div class="box_title">当前速度: <span id="time_speed_display"></span>%</div>
 					<br>
 	
-					Decorations (each decoration adds +<span id="time_add_display"></span>% speed):
+					装饰品（每个装饰增加 +<span id="time_add_display"></span>% 速度):
 					<div class="box_list" id="list_decorations"></div>
 					<br>
 				</div>
@@ -126,18 +127,18 @@
 			</div>
 			<div class="no_display" id="cont_achievements">
 				<div class="box">
-					Santa needs your help.  Create 7.1 billion presents in time for Christmas!<br>
+					圣诞老人需要你的帮助。圣诞节到来前制造7.1 billion礼物！<br>
 					<br>
 
 					<div class="box_list">
-						Actual play time: <span id="play_time"></span><br>
+						实际游戏时间: <span id="play_time"></span><br>
 					</div>
 					<br>
 
-					<div class="box_title b_margin">Productivity</div>
+					<div class="box_title b_margin">生产率</div>
 					<div class="box_list">
-						Toy multiplier: x<span id="toys_mult"></span><br>
-						Wrapping multiplier: x<span id="wrap_mult"></span><br>
+						玩具加成倍数: x<span id="toys_mult"></span><br>
+						包装加成倍数: x<span id="wrap_mult"></span><br>
 						<span id="songs_mult"></span>
 						<span id="outsource_mult"></span>
 						<span id="machine_mult"></span>
@@ -145,12 +146,12 @@
 					</div>
 					<br>
 
-					<div class="box_title b_margin">Statistics</div>
+					<div class="box_title b_margin">统计</div>
 					<div class="box_list">
-						Total toys made by clicking: <span id="toys_clicked_count"></span><br>
+						通过点击制作的玩具总数: <span id="toys_clicked_count"></span><br>
 						<span id="toys_elves_count"></span>
 						<span id="toys_outsource_count"></span>
-						Total presents wrapped by clicking: <span id="presents_clicked_count"></span><br>
+						通过点击包装的总礼物: <span id="presents_clicked_count"></span><br>
 						<span id="presents_elves_count"></span>
 						<span id="presents_machined_count"></span>
 						<span id="presents_mirrored_count"></span>
@@ -159,24 +160,24 @@
 					</div>
 					<br>
 
-					<div class="box_title b_margin">Upgrades (<span id="num_upgrades"></span>)</div>
+					<div class="box_title b_margin">升级 (<span id="num_upgrades"></span>)</div>
 					<div class="box_list" id="list_upgrades"></div>
 					<br>
 				</div>
 			</div>
 			<div class="no_display" id="cont_save">
 				<div class="box">
-					Last saved: <span id="save_time">never</span><br>
+					上次保存: <span id="save_time">无</span><br>
 					<br>
-					<div class="box box_upgrade box_upgrade_save" onclick="save_to_cookie_manual()">Save now</div>
+					<div class="box box_upgrade box_upgrade_save" onclick="save_to_cookie_manual()">保存</div>
 					<br>
-					<div class="box box_upgrade box_upgrade_save" onclick="save_to_code()">Export save code</div>
+					<div class="box box_upgrade box_upgrade_save" onclick="save_to_code()">导出存档</div>
 					<br>
-					<div class="box box_upgrade box_upgrade_save" onclick="load_from_code()">Load from code</div>
+					<div class="box box_upgrade box_upgrade_save" onclick="load_from_code()">导入存档</div>
 					<br>
-					<div class="box box_upgrade box_upgrade_save" onclick="reset_game_confirm()">Reset game</div>
+					<div class="box box_upgrade box_upgrade_save" onclick="reset_game_confirm()">重置游戏</div>
 					<br>
-					Please note that the game is automatically saved to a browser cookie at regular intervals.  However cookies aren't guaranteed to persist, to be safe please record a save code between sessions.
+					请注意，游戏会定期自动保存到浏览器Cookie中。 但是，不保证cookie会持续存在，为了安全起见，请在游戏时导出备份存档代码。
 				</div>
 			</div>
 		</div>
