--- a/index.html
+++ b/index.html
@@ -191,13 +191,13 @@
 	</div>
 	<div id="div_win">
 		<div class="win_stripe">
-			<div class="red_writing_3">Congratulations</div>
+			<div class="red_writing_3">恭喜你！</div>
 			<br>
-			You've made 7.1 billion presents and saved Christmas.<br>
+			你已经制作了7.1 billion礼物并拯救了圣诞节。<br>
 			<br>
-			<div class="red_writing_4">Merry Clickmas!</div>
+			<div class="red_writing_4">圣诞点击快乐！</div>
 			<br>
-			<div class="box box_upgrade box_upgrade_win" onclick="dismiss_win()">OK</div>
+			<div class="box box_upgrade box_upgrade_win" onclick="dismiss_win()">好的</div>
 		</div>
 	</div>
 	<!--客服 开始-->
