--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <script src="main_r4.js"></script>
 
 </head><body onload="init()">
-<script src="zh/core.js"></script>
+	<script src="chs.js"></script>
+	<script src="core.js"></script>
 	<div id="div_left">
 	</div>
 	<div id="div_header">
